# scriptorium

./: .gitattributes  .gitignore  AGENT.md  CHANGELOG.md  HOWTO.md  RATIONALE.md  README.md  SPEC.md  ruff.toml  update_bolt.py
.github/workflows/: ci.yml  plugin-ci.yml  plugin-release.yml  release-harness.yml  release.yml
.jules/: bolt.md
adapters/: README.md
adapters/obsidian/: README.md  dashboard.py  graph_view.py
adapters/obsidian/plugin/: .gitignore  DESIGN.md  README.md  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
adapters/obsidian/plugin/src/: graphIndex.test.ts  graphIndex.ts  health.ts  main.ts  root.test.ts  root.ts  scripRunner.test.ts  scripRunner.ts  settings.ts  types.test.ts  types.ts  view.ts
docs/: comparisons.md  pageindex-adapter.md  roadmap.md
examples/answer-demo-vault/: README.md  SPEC.md
examples/answer-demo-vault/vault/facts/: _meta.yaml  claims.ndjson
examples/answer-demo-vault/vault/raw/: atlas-cache.md  atlas-cache.meta.yaml  atlas-incidents.md  atlas-incidents.meta.yaml
harness/: README.md  pyproject.toml
harness/src/scrip_harness/: __init__.py  answer.py  cli.py  compile.py  extract.py  graph.py  ingest.py  model.py  promote.py  reconcile.py  runner.py
harness/tests/: test_answer.py  test_cli.py  test_compile.py  test_extract.py  test_graph.py  test_ingest.py  test_model.py  test_promote.py  test_reconcile.py  test_runner.py  test_version.py
scrip/: README.md  pyproject.toml  pyrightconfig.json
scrip/src/scrip/: __init__.py  anchors.py  blocks.py  cli.py  embeddings.py  errors.py  facts.py  frontmatter.py  graph.py  hashing.py  ingest.py  lock.py  manifest.py  ontology.py  pageindex_adapter.py  query.py  retrieval.py  similar.py
scrip/tests/: conftest.py  test_anchor_cmd.py  test_anchors.py  test_blocks.py  test_embeddings.py  test_fact_cmd.py  test_facts.py  test_frontmatter.py  test_graph_status.py  test_hashing.py  test_index_cmd.py  test_ingest.py  test_json_shapes.py  test_lock.py  test_manifest.py  test_new_cmd.py  test_pageindex_cmd.py  test_query.py  test_retrieval.py  test_similar_cmd.py  test_span_cmd.py  test_stamp.py  test_status_cmd.py  test_unlock_cmd.py  test_verify.py  test_version.py  test_watch.py
scripts/: demo_answer.sh  seed_vault.py
vault/facts/: _meta.yaml  claims.ndjson  entities.ndjson  graph.ndjson  reconciliations.ndjson
vault/raw/: commonplace-books.md  commonplace-books.meta.yaml  contrarian-rag.md  contrarian-rag.meta.yaml  ganglani-local-rag.md  ganglani-local-rag.meta.yaml  karpathy-llm-wiki.md  karpathy-llm-wiki.meta.yaml  motherduck-duckdb-obsidian.md  motherduck-duckdb-obsidian.meta.yaml  rag-chunking-limits.md  rag-chunking-limits.meta.yaml
vault/wiki/: _graph.md  _status.md  index.md  log.md
vault/wiki/concepts/: compilation-over-retrieval.md  provenance-and-staleness.md  the-answer-ladder.md  why-immutability.md
vault/wiki/entities/: duckdb.md
