[project]
name = "scrip-harness"
version = "0.2.0"
description = "Runnable AGENT.md compile loop for scriptorium: drives `scrip` via subprocess + Claude. Not part of the deterministic scrip core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "anthropic>=0.40",
    "scriptoria",
]

[project.urls]
Homepage = "https://github.com/coredipper/scriptorium/tree/main/harness"
Changelog = "https://github.com/coredipper/scriptorium/blob/main/CHANGELOG.md"
Issues = "https://github.com/coredipper/scriptorium/issues"

[project.scripts]
scrip-harness = "scrip_harness.cli:main"

[tool.uv.sources]
scriptoria = { path = "../scrip" }

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrip_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
