[project]
name = "scrip-harness"
version = "0.10.0"
description = "Runnable AGENT.md compile loop for scriptorium: drives `scrip` via subprocess + a model provider. Not part of the deterministic scrip core."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "anthropic>=0.40",
    # Imported directly for the structured-output schemas (compile/extract) — don't
    # rely on anthropic to pull it in transitively; declare what we import.
    "pydantic>=2",
    # Version floor (not the dev path source below) is what ships in the wheel's
    # Requires-Dist, so an installed scrip-harness pulls scriptoria from PyPI.
    # >=0.8.0: `scrip-harness graph` can emit *cited* edges (quote+source_id), and
    # only scriptoria>=0.8.0 accepts those edge fields — older versions reject them
    # as unknown and fail the graph pass.
    "scriptoria>=0.8.0",
]

[project.optional-dependencies]
# `scrip-harness ingest <url|.html|.pdf>` runs the bundled scriptoria in THIS
# environment (DEFAULT_SCRIP_CMD = `python -m scrip.cli`, so PATH is bypassed) —
# the HTML/PDF extraction deps must therefore live here, not in a separately
# PATH-installed `scriptoria[ingest]`. Plain .md/.txt sources need nothing extra.
ingest = ["scriptoria[ingest]"]

[project.urls]
Homepage = "https://github.com/coredipper/scriptorium/tree/main/harness"
Changelog = "https://github.com/coredipper/scriptorium/blob/main/CHANGELOG.md"
Issues = "https://github.com/coredipper/scriptorium/issues"

[project.scripts]
scrip-harness = "scrip_harness.cli:main"

[tool.uv.sources]
scriptoria = { path = "../scrip" }

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrip_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
